--- a/Documents/DevM/personal_project/support/src/App.css
+++ b/Documents/DevM/personal_project/support/src/App.css
@@ -28,8 +28,14 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
+html {
+	height: 100%;
+  }
+  
 body {
-    line-height: 1;
+	line-height: 1;
+	height: 100%;
 
 }
 ol, ul {
